# Moneta

./: .gitignore  ALL_CHARTS_CONFIG_FIX_NEEDED.md  ALL_CHARTS_FIXED_COMPLETE.md  ALL_FEATURES_COMPLETE.md  AXIS_ANIMATIONS_COMPLETE.md  AXIS_ANIMATIONS_FIX_PLAN.md  CHANGES_SUMMARY.md  CHART_CONFIGURATION_FIXED.md  CHART_CONFIGURATION_FIXES_COMPLETE.md  CHART_CONFIG_FIX_SUMMARY.md  CHART_ENHANCEMENTS_COMPLETE.md  CHART_IMPLEMENTATION_COMPLETE.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_TODO_LIST.md  CONFIGURATION_UI_NOT_WORKING.md  CONFIGURATION_UI_STATUS.md  CURRENCY_DEBUGGING_GUIDE.md  DATE_FIELD_SELECTOR_ADDED.md  DATE_FILTERING_COMPLETE_FIX.md  DATE_FILTERING_FIXED.md  DATE_FILTER_BACKEND_FIX.md  DATE_FILTER_FIX.md  FINAL_CURRENCY_FIXES.md  FINAL_SIDEBAR_FIXES.md  FINAL_STATUS_REPORT.md  FINANCIAL_COLORS_FIXED.md  FIXES_APPLIED.md  HOW_TO_CONFIGURE_CURRENCY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_COMPLETED.md  MANUAL_REFRESH_ADDED.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_PROGRESS.md  QUICK_FIX_CURRENCY.md  REMAINING_CHART_FIXES.md  REPORTS_IMPLEMENTATION.md  REPORTS_PHASE2_READY.md  REPORTS_READY.md  SIDEBAR_AND_FILTERS_COMPLETE.md  (+12 more)
backend/: create_default_report.py  fix_test_transactions.py  pyproject.toml  run_tests.py
backend/docs/: README.md  amount-sign-correction-rules.md  api-overview.md  formulas-api.md  reports-api.md  rules-api.md  statements-api.md  transactions-api.md
backend/scripts/: create_apple_rule.py  create_sign_correction_rules.py  create_specific_amount_rules.py
backend/server/: server.py  settings.py
backend/server/cli/: commands.py
backend/server/migrations/: env.py
backend/server/models/: configurations.py  main.py  main.py.backup
backend/server/routers/: formulas.py  general.py  (+5 more)
backend/tests/: conftest.py  test_fallback_rules.py  test_filtering_api.py  test_filtering_api_fixed.py  test_formula_commands.py  test_reports_api.py  test_rule_chaining.py  test_rule_execution.py  test_rules_integration.py  test_rules_system.py  test_statements_api.py  test_transactions_api.py  test_unique_constraint.py
(+110 files in other folders)
